[gd_scene load_steps=4 format=2]

[ext_resource path="res://aim_bullet.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemies/pngkit_yellow-lens-flare-png_926482.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 32.28

[node name="aim_bullet" type="Area2D"]
position = Vector2( 8, -8 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -8, 0 )
scale = Vector2( 0.025, 0.025 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -7, 5 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -7.5, -1.5 )
scale = Vector2( 1.75, 1.35 )

[node name="aiming_area" type="Area2D" parent="."]
position = Vector2( 18, -4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="aiming_area"]
position = Vector2( -19, 5 )
scale = Vector2( 0.107116, 0.0292887 )
polygon = PoolVector2Array( -5, -42, 1111, -646, 1107, 10, 1095, 710, -1, 22 )

[connection signal="body_entered" from="." to="." method="_on_aim_bullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="aiming_area" to="." method="_on_aiming_area_body_entered"]
